--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
               }
           })();
       </script>
-      
+
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>App Book</title>
@@ -52,6 +52,6 @@
 
   </body>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-  <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="dist/build.js"></script>
+  <!--<script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>-->
+  <script type="text/javascript" src="docs/build.js"></script>
 </html>
