--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@
   </body>
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <!--<script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>-->
-  <script type="text/javascript" src="docs/build.js"></script>
+  <script type="text/javascript" src="dist/build.js"></script>
 </html>
