changed data source

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
                 <nav id="main-nav" role="navigation" class="is-flexy is-full is-around">
 
-                    <router-link to="books" title="Books">books</router-link>
-                    <router-link to="about" title="About">about</router-link>
-                    <router-link to="contact" title="Contact">contact</router-link>
+                    <a href="books" title="Books">books</a>
+                    <a href="about" title="About">about</a>
+                    <a href="contact" title="Contact">contact</a>
 
                 </nav><!-- #nav -->
 
