--- a/index.html
+++ b/index.html
@@ -26,24 +26,19 @@
 
                 <a href="/" title="Home Page" class="logo"></a>
 
-                <nav id="main-nav" role="navigation" class="is-flexy is-full is-around">
-
-                    <a href="books" title="Books">books</a>
-                    <a href="about" title="About">about</a>
-                    <a href="contact" title="Contact">contact</a>
-
-                </nav><!-- #nav -->
-
             </div>
 
     </header>
 
     <div id="app">
 
-		<!-- <nav>
-			<router-link to="foo">Go to Foo</router-link>
-			<router-link to="bar">Go to Bar</router-link>
-		</nav> -->
+        <nav id="main-nav" role="navigation" class="is-flexy is-full is-around">
+
+            <router-link to="books" title="Books">books</router-link>
+            <router-link to="about" title="About">about</router-link>
+            <router-link to="contact" title="Contact">contact</router-link>
+
+        </nav><!-- #nav -->
 		<!-- route outlet -->
 		<!-- component matched by the route will render here -->
 		<router-view></router-view>
